# nfl-player-stats

./: pyproject.toml
nfl_player_stats/: main.py
tests/: test_nfl_player_stats.py
